--- a/.github/workflows/schedule-update-actions.yml
+++ b/.github/workflows/schedule-update-actions.yml
@@ -5,7 +5,7 @@ name: GitHub Actions Version Updater
 on:
   workflow_dispatch:
   schedule:
-    # Automatically run on every 5mins testing PURPOSE ONLY
+    # Automatically run on every Sunday
     - cron:  '*/5 * * * *'
 
 jobs:
@@ -14,6 +14,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3.5.2
+        with:
+          # [Required] Access token with `workflow` scope.
+          token: ${{ secrets.PAT }}
+
       - name: Run GitHub Actions Version Updater
         uses: saadmk11/github-actions-version-updater@v0.8.1
         with:
