--- a/.github/workflows/schedule-update-actions.yml
+++ b/.github/workflows/schedule-update-actions.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
   schedule:
     # Automatically run on every Sunday
-    - cron:  '*/5 * * * *'
+    - cron:  '0 0 * * 0'
 
 jobs:
   build:
